--- a/SED_Research Papers.html
+++ b/SED_Research Papers.html
@@ -124,12 +124,12 @@
 </head>
 <body id="bgimg">
     <header class="header">
-        <a href="Sed_website_lh.html" class="logo">
+        <a href="https://is-sed.github.io/sed/" class="logo">
             <P>SED</P>
         </a>
         <nav class="nav">
             <a href="SED_Research Papers.html" class="nav-item" target="_blank" rel="noopener noreferrer">Research Papers</a>
-            <a href="SED_Magazine.html" class="nav-item" target="_blank" rel="noopener noreferrer">Magazines</a>
+            <a href="https://is-sed.github.io/magazine/" class="nav-item" target="_blank" rel="noopener noreferrer">Magazines</a>
             <a href="https://www.youtube.com/@sed-c2s" class="nav-item" target="_blank" rel="noopener noreferrer">Videos</a>
             <!-- <a href="/link3" class="nav-item" target="_blank" rel="noopener noreferrer">Competitions</a> -->
             <div class="dropdown">
@@ -170,4 +170,5 @@
         });
     </script>
 </body>
+
 </html>
