--- a/research.html
+++ b/research.html
@@ -128,7 +128,7 @@
             <P>SED</P>
         </a>
         <nav class="nav">
-            <a href="" class="nav-item" target="_blank" rel="noopener noreferrer">Research Papers</a>
+            <a href="" class="nav-item" target="_self" rel="noopener noreferrer">Research Papers</a>
             <a href="https://is-sed.github.io/magazine/" class="nav-item" target="_blank" rel="noopener noreferrer">Magazines</a>
             <a href="https://www.youtube.com/@sed-c2s" class="nav-item" target="_blank" rel="noopener noreferrer">Videos</a>
             <!-- <a href="/link3" class="nav-item" target="_blank" rel="noopener noreferrer">Competitions</a> -->
@@ -172,4 +172,5 @@
 </body>
 
 </html>
+
 
