--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
         #bgimg {
         height: 100vh;
         background-image: url('SED Website Background.png');
-        background-size: cover;
-        background-repeat: no-repeat;
         background-position: center center;
+        width:100%;
+        background-repeat: repeat;
+        background-size: cover;
         }
         #representation-logo {
             display: block;
@@ -172,6 +173,7 @@
 </body>
 
 </html>
+
 
 
 
